# klaar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
benches/: cache_bench.rs  diff_bench.rs
install/: setup.sh
schema/: memory.surql
src/: lib.rs  main.rs  utils.rs
src/cache/: mod.rs  watcher.rs
src/config/: mod.rs
src/db/: mod.rs
src/embedder/: mod.rs
src/mcp/: mod.rs  tools.rs
src/parser/: mod.rs
src/tools/: apply.rs  gatekeeper.rs  index.rs  ls.rs  memory.rs  mod.rs  read.rs  search.rs  standards.rs
tests/: integration_tests.rs
