[package]
name = "klaar"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Universal local-first AI coding agent optimizer and Model Context Protocol (MCP) server"
repository = "https://github.com/NMA-vc/klaar"
homepage = "https://github.com/NMA-vc/klaar"
documentation = "https://github.com/NMA-vc/klaar/blob/main/README.md"

[[bin]]
name = "klaar"
path = "src/main.rs"

[lib]
name = "klaar"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
moka = { version = "0.12", features = ["future"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Database (embedded, no external process)
surrealdb = { version = "2", features = ["kv-surrealkv"] }

# Tree-sitter (skeleton extraction)
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"

# Error handling
anyhow = "1"

# Logging (to stderr — stdout is MCP channel)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
regex = "1"
notify = "6.1.1"
similar = "2"

# Vector embeddings for semantic memory recall (BGE-Small, runs locally, no API key)
fastembed = { version = "4", optional = true }

[features]
default = ["semantic-search"]
semantic-search = ["dep:fastembed"]
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-debug]
inherits = "release"
strip = false
debug = 1

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "diff_bench"
harness = false

[dev-dependencies]
tempfile = "3.27.0"
criterion = { version = "0.5", features = ["html_reports"] }
